--- a/src/Drago/Commerce/UI/Order/Customer.latte
+++ b/src/Drago/Commerce/UI/Order/Customer.latte
@@ -1,4 +1,4 @@
-{templateType Drago\Commerce\Control\Customer\CustomerTemplate}
+{templateType Drago\Commerce\UI\Order\CustomerTemplate}
 
 {if count($shoppingCart)}
 	<p>Information for delivery of goods</p>
