--- a/src/Drago/Commerce/UI/Order/Summary.latte
+++ b/src/Drago/Commerce/UI/Order/Summary.latte
@@ -1,5 +1,5 @@
-{templateType Drago\Commerce\Control\Summary\SummaryTemplate}
-{varType Drago\Commerce\Domain\ProductCart[] $shoppingCart}
+{templateType Drago\Commerce\UI\Order\SummaryTemplate}
+{varType Drago\Commerce\Domain\Product\ProductCart[] $shoppingCart}
 
 {if count($shoppingCart)}
 	<p>Pre-shipment summary</p>
