--- a/src/Drago/Commerce/UI/ShoppingCart/MiniCart.latte
+++ b/src/Drago/Commerce/UI/ShoppingCart/MiniCart.latte
@@ -1,4 +1,4 @@
-{templateType Drago\Commerce\Control\Basket\BasketTemplate}
+{templateType Drago\Commerce\UI\ShoppingCart\MiniCartTemplate}
 
 <a href="{$linkShoppingCart}">Shopping Cart</a>
 <p>{$totalPrice|money}</p>
