--- a/src/Drago/Commerce/UI/Order/Customer.latte
+++ b/src/Drago/Commerce/UI/Order/Customer.latte
@@ -65,7 +65,7 @@
 		</div>
 
 		<div class="text-end">
-			<input n:name="send" type="submit" class="btn btn-primary" value="Send Order" />
+			<input n:name="send" class="btn btn-primary" />
 		</div>
 
 	</form>
