--- a/src/Drago/Commerce/UI/Product/Product.latte
+++ b/src/Drago/Commerce/UI/Product/Product.latte
@@ -68,11 +68,11 @@
 
                         {if $product->getStock() > 5}
                             <p class="small text-muted mb-2 text-success">
-                                In stock &gt; 5 ks
+                                In stock &gt; 5 pcs
                             </p>
                         {elseif $product->getStock() > 0}
                             <p class="small text-muted mb-2 text-warning">
-                                In stock: {$product->getStock()} ks
+                                In stock: {$product->getStock()} pcs
                             </p>
                         {else}
                             <p class="small text-muted mb-2 text-danger">
@@ -80,10 +80,14 @@
                             </p>
                         {/if}
 
-                        {* Add to cart form button with accessible label *}
-                        <form n:name="addToCart-{$product->id}">
-                            {input add, class: "btn btn-secondary btn-sm", aria-label => "Add {$product->name} to cart"}
-                        </form>
+                        {if $product->getStock() > 0}
+
+                            {* Add to cart form button with accessible label *}
+                            <form n:name="addToCart-{$product->id}">
+                                {input add, class: "btn btn-secondary btn-sm", aria-label => "Add {$product->name} to cart"}
+                            </form>
+                        {/if}
+
                     </div>
                 </div>
             </div>
