--- a/src/Drago/Commerce/UI/Order/Summary.latte
+++ b/src/Drago/Commerce/UI/Order/Summary.latte
@@ -67,7 +67,7 @@
 		<p class="mb-2">
 			<strong class="fw-semibold">Delivery address:</strong><br>
 			{$customer->street}<br>
-			{$customer->post_code} {$customer->city}<br>
+			{$customer->postal_code} {$customer->city}<br>
 			{$customer->country}
 		</p>
 		{if $customer->note}
